@@ -1,3 +1,13 @@
+  2008-08-06  Eric Seidel  <eric@webkit.org>
+
+        Build fix only, no review.
+
+        Attempt to fix the Linux and --no-svg builds.
+
+        * bindings/js/ScriptController.h: wrap RetainPtr include in PLATFORM(MAC)
+        * css/CSSComputedStyleDeclaration.cpp:
+        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue): add missing CSSProperties to switch
+
 2008-08-06  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Cameron Zwarich.
